# cust-team-nicholas-fraser-test-repository

./: README.md  pyproject.toml
data/: .gitignore  desc.txt
figures/: desc.txt
notebooks/: .gitignore  desc.txt  test-notebook-1.ipynb
sql/: desc.txt
src/: desc.txt
