[project]
name = "test-repository"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicholas Fraser",email = "n.fraser@digital-science.com"}
]
readme = "README.md"
requires-python = "^3.12,<3.13"
dependencies = [
    "jupyterlab (>=4.4.9,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
